objects/BMCServiceDesk__Incident__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Due_Date_Progress__c</fullName>
        <formula>IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__dueDateTime__c &lt; NOW()), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_red.gif&quot;, &quot;Due date of a record has passed&quot;), IF(AND(BMCServiceDesk__state__c,  BMCServiceDesk__Time_Remaining_Percentage__c &gt; 50), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_green.gif&quot;, &quot;More than 50% of time is remaining in the due date&quot;), IF(AND(BMCServiceDesk__state__c,  BMCServiceDesk__Time_Remaining_Percentage__c &lt;= 50), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_yellow.gif&quot;, &quot;Less than or equal to 50% of time is remaining in the due date&quot;), IF(AND(!BMCServiceDesk__state__c,  BMCServiceDesk__closeDateTime__c &lt;= BMCServiceDesk__dueDateTime__c), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/permissions_confirm16.gif&quot;, &quot;Due date met&quot;), IF(AND(!BMCServiceDesk__state__c,  BMCServiceDesk__closeDateTime__c &gt; BMCServiceDesk__dueDateTime__c), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/permissions_deny16.gif&quot;, &quot;Due date is not met&quot;), &apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows status of incident in a graphical format.</inlineHelpText>
        <label>Due Date Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EmailServiceAddress__c</fullName>
        <description>This field stores the email service address, which is used to create an incident record.</description>
        <label>Email Service Address</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Event ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Item /  Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Incident</relationshipLabel>
        <relationshipName>Incident</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBroadcast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broadcast</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__state__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an open and active broadcast.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Broadcasts__c</referenceTo>
        <relationshipLabel>Linked Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to link the incident to the service that is affected by the incident.</inlineHelpText>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__ClassID__c</field>
                <operation>equals</operation>
                <value>BMC_BUSINESSSERVICE</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select the Business Service.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Incidents (Business Service)</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the incident&apos;s category. Categories allow you to classify the incident using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__AvailableForIncidents__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Select an active category for the incident/ service request.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the client for this record.</inlineHelpText>
        <label>Client ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.BMCServiceDesk__FKAccount__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>User.BMCServiceDesk__Account__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.BMCServiceDesk__FKAccount__c</field>
                <operation>equals</operation>
                <valueField>User.Contact.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClosedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the incident&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the incident.</inlineHelpText>
        <label>Impact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active impact.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Linked Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKOpenBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKPriority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Priority__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>select an active priority</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Priority__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRequestDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the request definition that you want to use to create a service request.</inlineHelpText>
        <label>Request Definition</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(8 OR 1) AND (2 AND 3) AND ((4 OR 5) AND (6 OR 7))</booleanFilter>
            <filterItems>
                <field>$Source.BMCServiceDesk__FKCategory__c</field>
                <operation>equals</operation>
                <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__FKCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__Online__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__StartDate__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__StartDate__c</field>
                <operation>lessOrEqual</operation>
                <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__CurrentDate__c</valueField>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__EndDate__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__EndDate__c</field>
                <operation>greaterOrEqual</operation>
                <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__CurrentDate__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.BMCServiceDesk__FKCategory__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>Select an active request definition.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRequestDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Detail</label>
        <referenceTo>BMCServiceDesk__SRM_RequestDetail__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKServiceOffering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link a service offering of the associated service.</inlineHelpText>
        <label>Service Offering</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__ClassID__c</field>
                <operation>equals</operation>
                <value>BMC_BUSINESSSERVICE</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Incidents (Service Offering)</relationshipLabel>
        <relationshipName>ServiceOfferringIncidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the appropriate status for the incident. Status is used to display the progress of an incident through its stages of opening to closure.</inlineHelpText>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select an active status that applies to incidents.</errorMessage>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToIncident__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the template that you want to apply to the record. Templates enable you to prepopulate commonly used fields on a form.</inlineHelpText>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
                <operation>equals</operation>
                <value>Incident</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__systemTemplate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active template for the incident.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select how quickly the incident needs to be resolved. The urgency and the level of impact are used to calculate the priority of the incident.</inlineHelpText>
        <label>Urgency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Urgency__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active urgency.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Feedback_Last_Submitted__c</fullName>
        <label>Feedback Last Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Feedback__c</fullName>
        <label>Feedback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impact_Id__c</fullName>
        <formula>BMCServiceDesk__FKImpact__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the incident&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the incident.</inlineHelpText>
        <label>Impact~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IncidentType__c</fullName>
        <label>Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Information Request</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
                <value>
                    <fullName>Request for Change</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Incorrect_category__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark incidents with incorrect category</description>
        <label>Incorrect category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Incorrect_owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark incidents with incorrect owner</description>
        <label>Incorrect owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_New_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to check whether incident is new or not.</description>
        <label>Is New Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_console__c</fullName>
        <formula>IF( !BMCServiceDesk__isServiceRequest__c, 
HYPERLINK(&quot;javascript:if(window.parent.isServiceCloudConsole){window.parent.addSConsoleTab(&apos;/apex/BMCServiceDesk__IncidentConsole?record_id=&quot; &amp; Id &amp; &quot;&amp;record_name=&quot;&amp; Name &amp;&quot;&amp;isServiceCloudConsole=true&apos;,&apos;&quot;&amp; Name &amp;&quot;&apos; );}else{ var loc = window.parent.location.href; if(loc.indexOf(&apos;isRFConsoleDetailForm=true&apos;)!= -1){window.parent.parent.addTab( &apos;&quot; &amp; Id &amp; &quot;&apos;, &apos;&quot; &amp;  Name  &amp; &quot; &apos;,&apos;Incident__c&apos;,&apos;&apos;,&apos;&apos;,&apos;&apos;,&apos;Incident&apos;);}else{if(window.parent.isConsoleEnabled){var win =window.open(&apos;/apex/BMCServiceDesk__IncidentConsole?record_id=&quot; &amp; Id &amp;&quot;&apos;);}else{var win =window.open(&apos;/apex/BMCServiceDesk__RemedyforceConsole?record_id=&quot; &amp; Id &amp; &quot;&amp;objectName=Incident__c&amp;inctype=Incident&apos;);}}}&quot;,  $Label.bmcservicedesk__incidentrecordprefix+Name,&quot;_self&quot;),
HYPERLINK(&quot;javascript:if(window.parent.isServiceCloudConsole){window.parent.addSConsoleTab(&apos;/apex/BMCServiceDesk__IncidentConsole?record_id=&quot; &amp; Id &amp; &quot;&amp;record_name=&quot;&amp; Name &amp;&quot;&amp;isServiceCloudConsole=true&apos;,&apos;&quot;&amp; Name &amp;&quot;&apos; );}else{ var loc = window.parent.location.href; if(loc.indexOf(&apos;isRFConsoleDetailForm=true&apos;)!= -1){window.parent.parent.addTab( &apos;&quot; &amp; Id &amp; &quot;&apos;, &apos;&quot; &amp;  Name  &amp; &quot; &apos;,&apos;Incident__c&apos;,&apos;&apos;,&apos;&apos;,&apos;&apos;,&apos;ServiceRequest&apos;);}else{if(window.parent.isConsoleEnabled){var win =window.open(&apos;/apex/BMCServiceDesk__IncidentConsole?record_id=&quot; &amp; Id &amp;&quot;&apos;);}else{var win =window.open(&apos;/apex/BMCServiceDesk__RemedyforceConsole?record_id=&quot; &amp; Id &amp; &quot;&amp;objectName=Incident__c&amp;inctype=ServiceRequest&apos;);}}}&quot;, $Label.bmcservicedesk__servicerequestprefix+Name,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record will be opened either in Incident Console or in Remedyforce Console tab</inlineHelpText>
        <label>Launch Console</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LockedRecordTimestamp__c</fullName>
        <description>this field is used in case of record locking.</description>
        <label>LockedRecordTimestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__New_Incident__c</fullName>
        <formula>IF (BMCServiceDesk__Is_New_Record__c, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/newIncident_icon_16.png&quot;,  $Label.bmcservicedesk__new_incident, 16, 16), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the incident is a new incident.</inlineHelpText>
        <label>New Incident</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PreferredContactMethod__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Priority_ID__c</fullName>
        <formula>BMCServiceDesk__FKPriority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Queue__c</fullName>
        <description>Queue to which the record is assigned.</description>
        <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reassigned_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Displays the number of times a record is reassigned to a user.</inlineHelpText>
        <label>Reassigned Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Recurrence__c</fullName>
        <label>Recurrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurringParentRecordId__c</fullName>
        <label>Recurring Parent Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RequestDetailCloneId__c</fullName>
        <description>Original service request detail ID that is used to clone the service request</description>
        <inlineHelpText>Original service request detail ID that is used to clone the service request</inlineHelpText>
        <label>Request Detail Clone ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceRequest__c</fullName>
        <formula>If((AND(!ISNULL( BMCServiceDesk__FKRequestDefinition__c ), !ISBLANK( BMCServiceDesk__FKRequestDefinition__c ))), $Label.bmcservicedesk__extjsmessageyes , $Label.bmcservicedesk__extjsmessageno )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Request_Title__c</fullName>
        <label>Service Request Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ShowDueDateDialog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field decides the opening of pop up window for recalculation of due date in case of Standard Forms.</description>
        <label>Show DueDate Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StatusChangeDate__c</fullName>
        <inlineHelpText>Stores the date/time on which the status of an incident is changed.</inlineHelpText>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status_ID__c</fullName>
        <formula>BMCServiceDesk__FKStatus__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the appropriate status for the incident. Status is used to display the progress of an incident through its stages of opening to closure.</inlineHelpText>
        <label>Status~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Task_Closed_Controller__c</fullName>
        <description>This field is used to activate the workflow for sending email to Incident owner after closing each linked task. The value is set with the linked task name to activate field update.</description>
        <label>Task Closed Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TemplateAlreadyApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template Already Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TemplateName__c</fullName>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TimeSpentInCurrentStatus__c</fullName>
        <formula>IF( BMCServiceDesk__Clock_Status__c !=$Label.bmcservicedesk__clockstatusstopped,IF(FLOOR((NOW() -BMCServiceDesk__StatusChangeDate__c)* 1440) &gt;=100000,100000, FLOOR((NOW() -BMCServiceDesk__StatusChangeDate__c)* 1440)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the total time for which an incident is assigned to the current status. This field does not consider the business hours configured for an organization.</inlineHelpText>
        <label>Time Spent In Current Status (minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Time_Remaining_Percentage__c</fullName>
        <description>Time remaining (in percentage) to resolve an incident. This value is based on the opened and due date of an incident.If the due date of an incident has passed, this field returns 0.If an incident is closed or the Due Date field is blank, this field returns 100.</description>
        <formula>IF(OR( ISBLANK(BMCServiceDesk__dueDateTime__c), !BMCServiceDesk__state__c ),100,
IF( ((BMCServiceDesk__dueDateTime__c- NOW())/(BMCServiceDesk__dueDateTime__c- BMCServiceDesk__openDateTime__c ))*100&gt;0, ((BMCServiceDesk__dueDateTime__c- NOW())/(BMCServiceDesk__dueDateTime__c- BMCServiceDesk__openDateTime__c ))*100,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalWorkTime__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Displays the total time for which a staff has worked on an incident during the business hours. This field calculates only the time spent on an incident when the work clock is running.</inlineHelpText>
        <label>Total Work Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Duration__c</fullName>
        <label>Total Duration (minutes)</label>
        <summarizedField>BMCServiceDesk__IncidentHistory__c.BMCServiceDesk__Action_Duration__c</summarizedField>
        <summaryForeignKey>BMCServiceDesk__IncidentHistory__c.BMCServiceDesk__FKIncident__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type__c</fullName>
        <formula>If(( AND(!ISNULL( BMCServiceDesk__FKRequestDefinition__c ), !ISBLANK( BMCServiceDesk__FKRequestDefinition__c )) ) , $Label.bmcservicedesk__servicerequestlabel , $Label.bmcservicedesk__incident)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field can be used in workflows to increment the count when a new record is added to the Incident History.</description>
        <label>Record Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Urgency_ID__c</fullName>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select how quickly the incident needs to be resolved. The urgency and the level of impact are used to calculate the priority of the incident.</inlineHelpText>
        <label>Urgency~</label>
        <type>Text</type>
    </fields>
</CustomObject>